--- a/meson.build
+++ b/meson.build
@@ -69,6 +69,7 @@ wayland_scanner_client = generator(
 
 client_protocols = [
 	wl_protocol_dir / 'staging/ext-session-lock/ext-session-lock-v1.xml',
+	'wlr-output-power-management-unstable-v1.xml'
 ]
 
 protos_src = []
